Подготовка функциональных тестов

--- a/.gitignore
+++ b/.gitignore
@@ -136,8 +136,9 @@ cython_debug/
 
 ################## CUSTOM ##################
 
-# Файлы и директории тестировнаия
-test*
+# Файлы и директории тестирования
+test-0
+test-1
 
 # Упаковщик
 Build.py
