правка scrutinizer.yml

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,7 +15,7 @@ build:
           - command: 'coverage run -m pytest'
             coverage:
               file: '.coverage'
-              format: 'python-cc'
+              format: 'py-cc'
     analysis:
       tests:
         override:
