--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,6 +8,9 @@ filter:
         - tests/*
 
 build:
+  project_setup:
+    override:
+      - pip install coverage pytest re yaml tkinter shutil gettext
   nodes:
     analysis:
       tests:
@@ -17,7 +20,3 @@ build:
             coverage:
               file: '.coverage'
               format: 'py-cc'
-                project_setup:
-                  override:
-                    - pip install coverage
-                    - pip install pytest
