--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,13 +9,17 @@ build:
                 override:
                     - 'true'
             tests:
-                before:
-                    - pip install coverage pytest
+              before:
+                - pip install coverage pytest
                 override:
                     - py-scrutinizer-run
                     - coverage run -m pytest
+                    -
                         command: pylint-run
                         use_website_config: true
+                  coverage:
+                    file: .coverage
+                    format: py-cc
 filter:
     excluded_paths:
         - '*/test/*'
