--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,6 +16,7 @@ build:
                       -
                           command: pylint-run
                           use_website_config: true
+                      - coverage run -m pytest
 filter:
     excluded_paths:
         - '*/test/*'
