--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,6 +8,8 @@ build:
             project_setup:
                 override:
                     - 'true'
+                before:
+                    - pip install coverage pytest
             tests:
                 override:
                     - py-scrutinizer-run
