--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,6 +10,7 @@ build:
                     - 'true'
                 before:
                     - pip install coverage pytest pyyaml python-gettext regex
+                    - sudo apt-get install -y python3-tk
             tests:
                 override:
                     - py-scrutinizer-run
