--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 language: python
+python:
+  - "3.7"
+  - "3.8"
+  - "3.9"
+  - "3.10"
+
+install:
+  - sudo apt-get install -y python3-tk
+  - pip install codecov pytest regex pyyaml
+
+script:
+  - codecov run -m pytest
