--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ python:
 
 install:
   - sudo apt-get install -y python3-tk
-  - pip install coverage pytest regex pyyaml
+  - pip install coverage pytest regex pyyaml coveralls
 
 services:
   - xvfb
 
 script:
   - coverage run -m pytest
+  - coveralls
