--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 python:
-  - "3.7"
-  - "3.8"
+# После введения аннотаций тесты на 3.7 и 3.8 перестали проходить
+#  - "3.7"
+#  - "3.8"
   - "3.9"
+# В TravisCI пока нет 3.10
 #  - "3.10"
 
 install:
